<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/layouttopo_luc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fdb46d"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icone_programa"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/layout_titulo_programa_luc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/listagem_de"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/usu_rios"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_status_luc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:text="Registros : 1/10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:ignore="HardcodedText,RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeListagem"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="[NOME]"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#DD2C00"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/endere_o"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtendereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/endereco"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#DD2C00" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/telefone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txttelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="[TELEFONE]"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#DD2C00"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/layout_botoes_luc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/btanterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anterior"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btproximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr_ximo"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_botao_fechar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btfechar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechar" />

    </LinearLayout>
</LinearLayout>
